# fungraph

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: chatbot.rs  gemini.rs  gemini_stream.rs
fungraph/: Cargo.toml
fungraph/examples/: chatbot.rs  gemini.rs  gemini_agent.rs  gemini_json.rs  gemini_stream.rs  gemini_tool.rs  gemini_tool_stream.rs  mcpagent.rs  simple_graph.rs
fungraph/examples/use_mcp/: Cargo.toml
fungraph/examples/use_mcp/src/: config.rs  config.toml  main.rs  use_mcp_tool.rs
fungraph/src/: lib.rs
fungraph/src/agent/: gemini.rs  mcp_agent.rs  mod.rs  test.json
fungraph/src/llm/: error.rs  mod.rs
fungraph/src/llm/gemini/: llm.rs  schema.rs
fungraph/src/node/: llmnode.rs  mod.rs  node.rs
fungraph/src/tests/: mod.rs
fungraph/src/tools/: mcp_tool.rs  mod.rs  parameter.rs  tool.rs
fungraph/src/types/: mod.rs  openai.rs
fungraph_derive/: .gitignore  Cargo.toml
fungraph_derive/src/: lib.rs
fungraph_derive/tests/: integration_test.rs
fungraph_llm/: Cargo.toml
fungraph_llm/src/: lib.rs  llm.rs  messages.rs
fungraph_llm/src/gemini/: config.rs  llm.rs  mod.rs  schema.rs
fungraph_llm/src/types/: openai.rs  token.rs
src/: lib.rs  main.rs
src/driver/: driver.rs
src/llm/: error.rs  gemini.rs  llm.rs  messages.rs  mod.rs
src/llm/gemini/: config.rs  llm.rs  mod.rs  schema.rs  tests.rs
src/node/: llmnode.rs  node.rs
src/types/: mod.rs  openai.rs
