[package]
name = "fungraph_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fungraph = { path = "../fungraph" }
fungraph_llm = { path = "../fungraph_llm" }
