[package]
name = "fungraph_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.27"
petgraph = "0.6"

async-trait = "0.1.80"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.0"
futures = "0.3"
dotenvy = "0.15.7"
reqwest-eventsource = "0.6.0"
tokio-stream = "0.1.15"
anyhow = "1.0.97"
fungraph_derive = { path = "../fungraph_derive" }

[dev-dependencies]
mockall = "0.11"
httpmock = "0.8.0-alpha.1"
serial_test = "2"
lazy_static = "1"
